# ood

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
exam/: Adapter.drawio  TextToSpeech.drawio
exam/src/: CMakeLists.txt  main.cpp
lab1/Shapes/: Shapes.drawio  Shapes.sln
lab1/Shapes/Shapes/: CCanvas.cpp  CCanvas.h  CircleBehavior.cpp  CircleBehavior.h  CircleDrawingStrategy.cpp  CircleDrawingStrategy.h  Color.h  CommandHandler.cpp  CommandHandler.h  Common.cpp  Common.h  ICanvas.h  IDrawingStrategy.h  IShapeBehavior.h  LineBehavior.cpp  LineBehavior.h  LineDrawingStrategy.cpp  LineDrawingStrategy.h  Main.cpp  Picture.cpp  Picture.h  Point.cpp  Point.h  RectangleBehavior.cpp  RectangleBehavior.h  RectangleDrawingStrategy.cpp  RectangleDrawingStrategy.h  Shape.cpp  Shape.h  ShapeParameters.h  Shapes.vcxproj  Shapes.vcxproj.filters  TextBehavior.cpp  TextBehavior.h  TextDrawingStrategy.cpp  TextDrawingStrategy.h  TriangleBehavior.cpp  TriangleBehavior.h  TriangleDrawingStrategy.cpp  TriangleDrawingStrategy.h
lab1/Shapes/Shapes_tests/: MockCanvasFixture.h  Picture_tests.cpp  Point_tests.cpp  Shape_tests.cpp  Shapes_tests.cpp  Shapes_tests.vcxproj  Shapes_tests.vcxproj.filters  cpp.hint
lab1/SimUDuck/: SimUDuck.sln
lab1/SimUDuck/SimUDuck/: SimUDuck.cpp  SimUDuck.vcxproj  SimUDuck.vcxproj.filters
lab1/SimUDuck/SimUDuck_tests/: SimUDuck_tests.cpp  SimUDuck_tests.vcxproj  SimUDuck_tests.vcxproj.filters
lab1/SimUDuck_functional/: SimUDuck_functional.sln
lab1/SimUDuck_functional/SimUDuck_functional/: SimUDuck_functional.cpp  SimUDuck_functional.vcxproj  SimUDuck_functional.vcxproj.filters  Strategy.h
lab1/SimUDuck_functional/SimUDuck_tests/: SimUDuck_tests.cpp  SimUDuck_tests.vcxproj  SimUDuck_tests.vcxproj.filters  cpp.hint
lab10/: CMakeLists.txt  DocumentEditor.drawio  shapes.drawio
lab10/src/: EditSink.h  Frame.h  ResizeType.h  main.cpp  ui_shapes.h
lab10/src/appModel/: IShapeAppModel.h  IShapesAppModel.h  ShapeAppModel.h  ShapesAppModel.cpp  ShapesAppModel.h
lab10/src/history/: AbstractUndoableEdit.cpp  AbstractUndoableEdit.h  CompoundEdit.cpp  CompoundEdit.h  IUndoableEdit.h  IUndoableEdit_fwd.h  UndoManager.cpp  UndoManager.h
lab10/src/history/edit/: AddShapeEdit.h  ReframeEdit.h  RemoveShapeEdit.h
lab10/src/model/: Ellipse.h  IShape.h  IShapes.h  Rectangle.h  Shape.h  ShapeFactory.h  Shapes.cpp  Shapes.h  Triangle.h
lab10/src/repository/: Repository.h
lab10/src/signals/: SignallingValue.h
lab10/src/tests/: Repository_tests.cpp  ShapeAppModel_tests.cpp  Shape_tests.cpp  ShapesAppModel_tests.cpp  Shapes_tests.cpp  UndoManager_tests.cpp
lab10/src/view/: IPainter.h  IShapeView.h  Painter.h  Selection.h  ShapeView.cpp  ShapeView.h  ShapeViewFactory.h
lab10/src/view/canvas/: Canvas.cpp  Canvas.h  ICanvas.h
lab10/src/view/selection/: ISelection.h  Selection.cpp  Selection.h
lab10/src/view/shapes/: EllipseView.h  RectangleView.h  TriangleView.h
lab10/src/viewModel/: IShapeViewModel.h  IShapesViewModel.h  ShapeViewModel.h  ShapesViewModel.cpp  ShapesViewModel.h
lab2/Observer/: Observer.sln
lab2/Observer/Observer/: CDisplay.h  CStatsDisplay.h  Observer.h  Observer.vcxproj  Observer.vcxproj.filters  Statistics.h  WeatherData.h  main.cpp
lab2/Observer/Weather/: Weather.vcxproj
lab2/Observer/WeatherStationDuo/: CDisplay.h  CStatsDisplay.h  Observer.h  Statistics.h  WeatherData.h  WeatherStationDuo.vcxproj  WeatherStationDuo.vcxproj.filters  main.cpp
lab2/Observer/WeatherStationDuo_tests/: WeatherStationDuo_tests.cpp  WeatherStationDuo_tests.vcxproj  WeatherStationDuo_tests.vcxproj.filters
lab3/Coffee/: Coffee.sln
lab3/Transform/: Transform.sln
lab4/Factory/: Factory.sln
lab5/: .$DocumentEditor.drawio.bkp  .$DocumentEditor.drawio.dtmp  .$DocumentEditor.drawio_1.dtmp  DocumentEditor.drawio
lab5/HtmlEditor/: HtmlEditor.sln
lab5_cmake/: CMakeLists.txt  DocumentEditor.drawio  main.cpp
lab5_cmake/document/: Document.cpp  Document.h  IDocument.h
lab5_cmake/documentItems/: DocumentItem.h  IImage.h  IParagraph.h  Image.h  Paragraph.h
lab5_cmake/edits/: ChangeTitleEdit.h  DeleteItemEdit.h  EditSink.h  InsetrtItemEdit.h  ReplaceTextEdit.h  ResizeImageEdit.h
lab5_cmake/fileStorage/: FileEntity.h  FileRef.h  FileStorage.h  FolderEntity.h  path.h
lab5_cmake/headers/: CompoundEdit.h  IDocument.h  IUndoableEdit.h  Menu.h  UndoManager.h
lab5_cmake/history/: AbstractUndoableEdit.cpp  AbstractUndoableEdit.h  IUndoableEdit_fwd.h  UndoManager.cpp  UndoManager.h
lab5_cmake/menu/: Menu.h
lab5_cmake/sources/: AbstractUndoableEdit.cpp  CompoundEdit.cpp  Menu.cpp  UndoManager.cpp
lab5_cmake/tests/: Document_tests.cpp  Edits_tests.cpp  FileStorage_tests.cpp  Menu_tests.cpp  UndoManager_tests.cpp  test.cpp
lab6/: CMakeLists.txt  ModernGraphicsRendererClassAdapter.h  ModernGraphicsRendererObjectAdapter.h  adapter.drawio  main.cpp
lab6/lib/: GraphicsLib.h  ModernGraphicsLib.h  ShapeDrawingLib.h
lab6/tests/: Adapter_tests.cpp
lab7/: .$slides.drawio.bkp  .~lock.composite.pptx#  CMakeLists.txt  slides.drawio
lab7/drawio/: .$slides.drawio.bkp  ShapeStyles.drawio  slides.drawio
lab7/slides/: Clonable.h  Color.h  Frame.h  main.cpp
lab7/slides/canvas/: ICanvas.h  SvgCanvas.cpp  SvgCanvas.h
lab7/slides/groupShape/: GroupShape.h  IGroupShape.h
lab7/slides/point/: AreEqual.h  Point.cpp  Point.h
lab7/slides/shapes/: Ellipse.h  IShape.h  Rectangle.h  Shape.h  Triangle.h
lab7/slides/styles/: StyleEnumerators.h
lab7/slides/styles/fillStyle/: CompositeFillStyle.h  FillStyle.h  IFillStyle.h
lab7/slides/styles/lineStyle/: CompositeLineStyle.h  ILineStyle.h  LineStyle.h
lab7/tests/: GroupShape_tests.cpp
lab8/: CMakeLists.txt  state.drawio
lab8/gumballMachine/: GumballMachine.h  Menu.h  NaiveGumballMachine.h  main.cpp
lab8/tests/: GumballMachine_tests.cpp  MultiGumballMachine_tests.cpp  NaiveGumballMachine_tests.cpp
lab9/: CMakeLists.txt
lab9/tests/: Image_tests.cpp  Tile_tests.cpp
lab9/tiles/: Color.h  Cow.h  Drawer.cpp  Drawer.h  Geom.h  Image.cpp  Image.h  Tile.h  main.cpp
(+345 files in other folders)
